--- a/packages/mithril-ui-form/package.json
+++ b/packages/mithril-ui-form/package.json
@@ -36,7 +36,7 @@
     "@types/mithril": "^2.0.7",
     "microbundle": "^0.13.0",
     "mithril-materialized": "^0.19.0",
-    "mithril-ui-form-plugin": "workspace:^0.3.0",
+    "mithril-ui-form-plugin": "^0.3.0",
     "rimraf": "^3.0.2",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4",
