--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mithril-ui-form-project",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Based on a JSON document, generate a UI form for the Mithril framework.",
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   "scripts": {
     "link": "pnpm link",
     "build": "pnpm build",
+    "build:npm": "npm run build --workspaces",
     "clean:local": "rimraf -fr docs",
     "clean": "npm run clean:local && pnpm clean",
     "start": "pnpm -r --parallel run dev",
