--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -29,7 +29,9 @@
     "mithril-materialized": "^0.19.0",
     "mithril-ui-form": "^1.0.2",
     "mithril-ui-form-leaflet-plugin": "^0.2.2",
-    "mithril-ui-form-rating-plugin": "^0.3.3"
+    "mithril-ui-form-rating-plugin": "^0.3.3",
+    
+    "mithril-ui-form-datetime-plugin": "^0.0.1"
   },
   "devDependencies": {
     "@babel/types": "7.13.14",
