--- a/packages/mithril-ui-form-datetime-plugin/package.json
+++ b/packages/mithril-ui-form-datetime-plugin/package.json
@@ -31,8 +31,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/mithril": "^2.0.7",
-    "mithril-ui-form-plugin": "^0.3.0",
     "microbundle": "^0.13.0",
+    "mithril-ui-form-plugin": "^0.3.0",
     "rimraf": "^3.0.2",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
@@ -45,5 +45,8 @@
     "> 1%",
     "maintained node versions",
     "not dead"
-  ]
+  ],
+  "dependencies": {
+    "date-fns": "^2.21.2"
+  }
 }
